skeplib/tests/fixtures/parser/invalid/from_import_wildcard_with_items.sk
from a.b import *, x;
fn main() -> Int { return 0; }
